--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>James Jee | Software Engineer</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+
+  <header>
+    <h1>James Jee</h1>
+    <p>Software Engineer</p>
+    <p>
+      <a href="resume.pdf" target="_blank">Resume</a> |
+      <a href="https://linkedin.com/in/james-jee-27z/">LinkedIn</a> |
+     <a href="mailto:jeejames27@gmail.com">Email</a>
+    </p>
+  </header>
+
+  <section>
+    <h2>Personal Projects</h2>
+
+    <h3>Finance Tracker</h3>
+    <p>A full-stack web application to manage income, expenses, budgets, and savings goals, centralizing personal
+financial data into a dashboard.</p>
+
+    <h3>End-to-End Web Validation</h3>
+    <p>Developed a React-based dashboard to trigger test runs, visualize results through charts, and export test logs to
+Excel.</p>
+  </section>
+
+</body>
+</html>
 
