--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>James Jee</h1>
     <p>Software Engineer</p>
     <p>
-      <a href="resume.pdf" target="_blank">Resume</a> |
+      <a href="jjee_Resume.pdf" target="_blank">Resume</a> |
       <a href="https://linkedin.com/in/james-jee-27z/">LinkedIn</a> |
      <a href="mailto:jeejames27@gmail.com">Email</a>
     </p>
